# haskellbook

./: chap02.hs  chap03.hs  chap04.hs  chap05.hs  chap06.hs  chap08.hs  chap10.hs  chap11.hs  chap12.hs  chap13.hs  chap15.hs  chap16.hs  chap17.hs  chap18.hs  iso.hs  possible ghci.conf text.txt  run.txt  z.txt
hello/exe/: Main.hs
nonhaskellbook/: Logic.hs  z.txt
nonhaskellbook/GEB/: Chap03.hs  z.txt
nonhaskellbook/HHPP/: Chap04.hs  z.txt
nonhaskellbook/ITMT/: Week1.hs
nonhaskellbook/LHBG/: Html.hs  Html2.hs  hello.hs
nonhaskellbook/LYAH/: chap11.hs
nonhaskellbook/LYAHFGG/: chap11.hs
nonhaskellbook/Martin/: Logic.hs  Martin.hs  Martin1.hs  Prolog.hs  Queens.hs  Queens.txt  z.txt
nonhaskellbook/Martin/graphz/: Graphz.hs  run graphviz's test.gv.txt
nonhaskellbook/Martin/project/: PatternSyn.hs  Test01.hs  Test02.hs  Test03.hs  Test05.hs  Test06.hs  Test08.hs  Test12.hs  Test13.hs  Test14.hs  Test15.hs  ast.txt  ast2.txt  baby-l4 - Shortcut.lnk  test.l4  z.txt
nonhaskellbook/course/: Jun16test.hs  Jun22test.hs  test.hs
nonhaskellbook/course/test/: LICENSE  package.yaml  test.cabal
nonhaskellbook/graph/: Graph.hs  graph.cabal
nonhaskellbook/graph/.stack-work/: stack.sqlite3
nonhaskellbook/graphz/: Graphz.hs  graphz.cabal  run graphviz's test.gv.txt  test.gv
nonhaskellbook/graphz/.stack-work/: stack.sqlite3
nonhaskellbook/graphz/.stack-work/install/x86_64-linux/5563ec6afccb7741263cd5393183d9ccb731a657d0741f9a5300e32078b1ef84/8.8.4/pkgdb/: graphz-0.1.0.0-KJsjUQRZayYLPXJfBlGDBY.conf  package.cache
nonhaskellbook/internet/: testing.hs  z.txt
nonhaskellbook/internet/2021-06-10/: GHC Language Extensions - Speech.txt  Speech.docx  presentation.hs  presentation.pptx  typeApps.hs  z.txt
nonhaskellbook/mongodb/: captaintest.cs  myScript.js  test1.hs  test2.hs  test3.hs
nonhaskellbook/mongodb/test/: stack.yaml  test.cabal
projects/chap13/hangman/: README.md  hangman.cabal
projects/chap13/hello/: hello.cabal
projects/chap13/hello/src/: DogsRule.hs
projects/chap14/add/: Addition.hs  addition.cabal
projects/chap14/arbinst/: Arbinst.hs  arbinst.cabal
projects/chap14/cipher/: Cipher.hs  cipher.cabal
projects/chap14/morse/: morse.cabal
projects/chap14/morse/.stack-work/: stack.sqlite3
projects/chap14/morse/.stack-work/ghci/0142ac29/: cabal_macros.h
projects/chap14/morse/.stack-work/ghci/8bf8ec78/: cabal_macros.h
projects/chap14/morse/.stack-work/ghci/bc77b34a/: cabal_macros.h
projects/chap14/morse/.stack-work/ghci/cd6ec37c/: cabal_macros.h
projects/chap14/morse/.stack-work/install/x86_64-linux/bab9d063b8d7337cbd3ed203e0cacc9cbabcbf77822e10e16bcf3f98b9b1c49e/8.8.4/lib/x86_64-linux-ghc-8.8.4/morse-0.1.0.0-50nSuV4HJzpLL7lYEll2Is/: Morse.hi
projects/chap14/morse/.stack-work/install/x86_64-linux/bab9d063b8d7337cbd3ed203e0cacc9cbabcbf77822e10e16bcf3f98b9b1c49e/8.8.4/pkgdb/: morse-0.1.0.0-50nSuV4HJzpLL7lYEll2Is.conf  package.cache
projects/chap14/morse/exe/: Main.hs
projects/chap14/morse/test/: tests.hs
projects/chap14/morse2/: ChangeLog.md  README.md  morse.cabal
projects/chap14/morse2/lib/: Morse.hs
projects/chap14/morse2/src/: Main.hs
projects/chap14/testhm/: testhm.cabal  z.txt
projects/chap14/testhm/lib/: Testhm.hs
projects/chap14/testhm/src/: Main.hs
projects/chap14/testhm/test/: test.hs
projects/chap14/testing/: testing.cabal  testing.hs
projects/chap14/usingqc/: ChangeLog.md  README.md  usingqc.cabal
projects/chap14/usingqc/exe/: Main.hs
projects/chap14/usingqc/src/: Usingqc.hs
projects/chap14/usingqc/test/: test.hs
projects/chap14/wordnumtest/: ChangeLog.md  README.md  wordnumtest.cabal
projects/chap14/wordnumtest/exe/: Main.hs
projects/chap14/wordnumtest2/: WordNumber.hs  wordnumtest.cabal  wordnumtest.hs
projects/chap15/: z.txt
projects/chap15/orphan/: Listy.hi  (+2 more)
projects/chap17/code/: Code.hs  code.cabal  z.txt
projects/chap17/code/.stack-work/: stack.sqlite3
projects/chap17/code/.stack-work/ghci/89ee096d/: cabal_macros.h
projects/chap17/code/.stack-work/ghci/eca04b45/: cabal_macros.h
projects/chap17/code/.stack-work/install/x86_64-linux/922769dcddf88c96dc28f217033243d5a4be75b540ddb1213bd2c81d0b2bb902/8.8.4/lib/x86_64-linux-ghc-8.8.4/code-0.1.0.0-GhgualUfbhvHrifFPgrOaO/: Code.dyn_hi  Code.hi
projects/chap17/code/.stack-work/install/x86_64-linux/922769dcddf88c96dc28f217033243d5a4be75b540ddb1213bd2c81d0b2bb902/8.8.4/pkgdb/: code-0.1.0.0-GhgualUfbhvHrifFPgrOaO.conf  package.cache
projects/chap17/ex178/: Ex178.hs  ex178.cabal  z.txt
projects/chap17/ex178/.stack-work/: stack.sqlite3
projects/chap17/ex178/.stack-work/ghci/18897489/: cabal_macros.h
projects/chap17/ex178/.stack-work/ghci/4a7e9438/: cabal_macros.h
projects/chap17/ex178/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
projects/chap18/ex184/: Ex184.hs  ex184.cabal  z.txt
projects/chap18/ex184/.stack-work/: stack.sqlite3
projects/chap18/ex184/.stack-work/ghci/3f320084/: cabal_macros.h
projects/chap18/ex184/.stack-work/ghci/ad04dde4/: cabal_macros.h
projects/chap18/ex184/.stack-work/install/x86_64-linux/922769dcddf88c96dc28f217033243d5a4be75b540ddb1213bd2c81d0b2bb902/8.8.4/lib/x86_64-linux-ghc-8.8.4/ex184-0.1.0.0-EUynL5gyEyBD7ys8pD0I4s/: Ex184.hi
projects/chap18/ex184/.stack-work/install/x86_64-linux/922769dcddf88c96dc28f217033243d5a4be75b540ddb1213bd2c81d0b2bb902/8.8.4/pkgdb/: ex184-0.1.0.0-EUynL5gyEyBD7ys8pD0I4s.conf  package.cache
projects/chap23/ex233/: Ex233.hs  ex233.cabal  z.txt
projects/chap23/ex233/.stack-work/: stack.sqlite3
projects/chap23/ex233/.stack-work/ghci/5e920989/: cabal_macros.h
projects/chap23/ex233/.stack-work/ghci/64ed4063/: cabal_macros.h
projects/chap23/ex233/.stack-work/ghci/7545dc16/: cabal_macros.h
projects/chap23/ex233/.stack-work/ghci/84045ffe/: cabal_macros.h
projects/chap23/ex234/: Ex234.hs  ex234.cabal  z.txt
projects/chap23/ex234/.stack-work/: stack.sqlite3
projects/chap23/ex234/.stack-work/ghci/185f093a/: cabal_macros.h
projects/hangman/: hangman.cabal
udemyhaskell/: test  test.hi  test.hs
(+113 files in other folders)
