-- instance.cabal
name: graphz
version: 0.1.0.0
license-file: LICENSE
author: Max
maintainer: maxloo@smu.edu.sg
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules: Graphz
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5
      , hspec
      , QuickCheck
      , fgl
      , graphviz
      , text
  hs-source-dirs: .
  default-language: Haskell2010

