name:                hello
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/bitemyapp/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Your Name Here
maintainer:          example@email.com
copyright:           2016, Max Loo
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hello
  hs-source-dirs:      exe
  main-is:             Main.hs
--  other-modules:       Hello
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hello  

library
  hs-source-dirs:      src
  exposed-modules:     DogsRule, Hello
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

-- NOTES
-- build-depends' hello in small caps dependent on "name: hello" and "hello.cabal" file name
-- if hello not added to build-depends, then add "src" to "hs-source-dirs" and include "other-modules: Hello"
-- similarly for DogsRule

-- COMPILE + EXEC
-- /mnt/c/Users/Max/src/hello/hello$ stack build
-- stack exec hello


