cabal-version: >= 1.10

name:           morse
version:        0.1.0.0
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license-file:   LICENSE
build-type:     Simple
category:       Text

library
  exposed-modules:
      Morse
  ghc-options: 
      -Wall -fwarn-tabs
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , QuickCheck
  default-language: Haskell2010

executable morse-exe
  main-is: Main.hs
  hs-source-dirs:
      exe
  ghc-options: 
      -Wall -fwarn-tabs 
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , morse
    , containers
    , QuickCheck
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs:
      test
  ghc-options: 
      -Wall -fno-warn-orphans 
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , morse
    , containers
    , QuickCheck
  default-language: Haskell2010
