cabal-version: 1.12

name:           usingqc
version:        0.1.0.0
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
category:       Text

library
  exposed-modules:
      Usingqc
  ghc-options: 
      -Wall -fwarn-tabs
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , QuickCheck
    , hspec
  default-language: Haskell2010

executable usingqc
  main-is: Main.hs
  hs-source-dirs:
      exe
  ghc-options: 
      -Wall -fwarn-tabs
  build-depends:
      base >=4.7 && <5
    , usingqc
    , containers
    , QuickCheck
    , hspec
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  ghc-options: 
      -Wall -fno-warn-orphans
  build-depends:
      base >=4.7 && <5
    , usingqc
    , containers
    , QuickCheck
    , hspec
  default-language: Haskell2010
