-- ex184.cabal
name: ex184
version: 0.1.0.0
license-file: LICENSE
author: Max
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules: Ex184
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5
      , hspec
      , QuickCheck
      , checkers
  hs-source-dirs: .
  default-language: Haskell2010

