-- ex234.cabal
name: ex234
version: 0.1.0.0
license-file: LICENSE
author: Max
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules: Ex234
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5
      , hspec
      , QuickCheck
      , checkers
      , random
  hs-source-dirs: .
  default-language: Haskell2010


